# stickerpacker

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
chilldev/: utils.py
stickerpacker/: bot.py  config.py  utils.py
