[tool.poetry]
name = "stickerpacker"
version = "0.1.2"
description = "Telegram bot for storing your favorite stickers in one set"
authors = ["Nikolay Mamontov <maamontov@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"

[tool.poetry.group.development.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
